--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 name = "auto"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Trevor Elliott <awesomelyawesome@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pest = "2.1.3"
-pest_derive = "*"
-repl-rs = "*"
-repl_framework = "*"
-pretty = "*"
+lalrpop-util = "0.19.8"
+
+[build-dependencies]
+lalrpop = "0.19.8"
